# ns-wifi

./: README.md  meson.build
blocklib/: meson.build
blocklib/wifi/: meson.build
blocklib/wifi/decode_mac/: decode_mac.yml  decode_mac_cpu.cc  decode_mac_cpu.hh  meson.build
blocklib/wifi/decode_packetized/: decode_packetized.yml  decode_packetized_cpu.cc  decode_packetized_cpu.hh  meson.build
blocklib/wifi/frame_equalizer/: constellation.cu  equalize.cu  frame_equalizer.cu  frame_equalizer.yml  frame_equalizer_cpu.cc  frame_equalizer_cpu.hh  frame_equalizer_cuda.cc  frame_equalizer_cuda.hh  meson.build  multiply_const.cu
blocklib/wifi/include/gnuradio/wifi/: api.h  constellations.hh  mapper.h  wifi_types.hh
blocklib/wifi/lib/: constellations.cc  meson.build  utils.cc  utils.h
blocklib/wifi/lib/equalizer/: base.cc  base.h  comb.cc  comb.h  lms.cc  lms.h  ls.cc  ls.h  sta.cc  sta.h
blocklib/wifi/lib/viterbi_decoder/: base.cc  base.h  viterbi_decoder_generic.cc  viterbi_decoder_generic.h  viterbi_decoder_x86.cc  viterbi_decoder_x86.h
blocklib/wifi/packetize_frame/: meson.build  packetize_frame.yml  packetize_frame_cpu.cc  packetize_frame_cpu.hh
blocklib/wifi/pre_sync/: meson.build  pre_sync.yml  pre_sync_cuda.cc  pre_sync_cuda.hh  presync.cu
blocklib/wifi/python/wifi/: __init__.py  meson.build
blocklib/wifi/sync_long/: meson.build  multiply.cu  remove_cp.cu  sync_long.yml  sync_long_cpu.cc  sync_long_cpu.hh  sync_long_cuda.cc  sync_long_cuda.hh
blocklib/wifi/sync_short/: freq_correction.cu  meson.build  sync_short.yml  sync_short_cpu.cc  sync_short_cpu.hh  sync_short_cuda.cc  sync_short_cuda.hh
blocklib/wifi/test/: meson.build  test_wifi_rx.py  wifi_threadpool.py
examples/grc/: wifi_threadpool.grc
matlab/: read_samples_from_file.m  test_capt.m
schedlib/: meson.build
schedlib/threadpool/: meson.build
schedlib/threadpool/include/gnuradio/schedulers/threadpool/: meson.build  scheduler_threadpool.hh  thread_wrapper.hh
schedlib/threadpool/include/gnuradio/schedulers/threadpool/threadpool/: LICENSE  detail.h  threadpool.h
schedlib/threadpool/lib/: meson.build  scheduler_threadpool.cc  thread_wrapper.cc
schedlib/threadpool/python/schedulers/threadpool/: __init__.py  meson.build
schedlib/threadpool/python/schedulers/threadpool/bindings/: meson.build  scheduler_threadpool_pybind.cc
schedlib/threadpool/test/: meson.build
